<resources>
    <string name="app_name">Mac</string>
    <string name="text_accounts">All Accounts</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_password">New Password</string>
    <string name="choose_your_birthday">Click on the icon to choose your birthdate</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="your_cart">Your Cart</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Reviews</string>
    <string name="ItemName">Name</string>
    <string name="Cost">Cost</string>
    <string name="Size">size</string>
    <string name="search">Search</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="remove_search_results">Reset</string>
    <string name="all_time_favorites">All Time Favorites</string>
    <string name="nuggets_logo">Nuggets logo</string>
    <string name="food_logo">Food logo</string>
    <string name="happy_meal_logo">Happy meal logo</string>
    <string name="salads_logo">Salads logo</string>
    <string name="mccafe_logo">McCafe logo</string>
    <string name="sweet_treats_logo">Sweet Treats logo</string>
    <string name="breakfast_meals_logo">Breakfast meals logo</string>
    <string name="morning_platters_logo">Morning platters logo</string>
    <string name="take_voice_input_logo">Take voice input logo</string>
    <string name="todo">TODO</string>
    <string name="cart">Cart</string>
    <string name="choose_product_label">Your Favourite Menu!</string>
    <string name="name">Name</string>
    <string name="total">Total</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_account">Your Account</string>
    <string name="category_icon">Category Icon</string>
    <string name="birthday">Birthday</string>
    <string name="add">Add</string>
    <string name="review">Review</string>
    <string name="no_account_yet_create_one">No Account yet? Create One</string>
    <string name="save_new_password">Save new Password</string>
    <string name="your_cart_is_empty">Your Cart is Empty!</string>
</resources>