<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseProductActivity">

    <GridView
        android:id="@+id/product_grid_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/btn_food"
        app:layout_constraintTop_toBottomOf="@+id/txt_search_box"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/txt_search_box"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:ems="10"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btn_voice_input"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/all_time_favorites"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_search_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel_order"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#C62828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_grid_view"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/btn_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/food_logo" />

    <ImageButton
        android:id="@+id/btn_nuggets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_food"
        app:srcCompat="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/nuggets_logo" />

    <ImageButton
        android:id="@+id/btn_salads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_nuggets"
        app:srcCompat="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/salads_logo" />

    <ImageButton
        android:id="@+id/btn_happy_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_salads"
        app:srcCompat="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/happy_meal_logo" />

    <ImageButton
        android:id="@+id/btn_mc_caffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_happy_meal"
        app:srcCompat="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/mccafe_logo" />

    <ImageButton
        android:id="@+id/btn_sweet_treats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mc_caffee"
        app:srcCompat="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/sweet_treats_logo" />

    <ImageButton
        android:id="@+id/btn_breakfast_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sweet_treats"
        app:srcCompat="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/breakfast_meals_logo" />

    <ImageButton
        android:id="@+id/btn_morning_platters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_breakfast_meals"
        app:srcCompat="@drawable/ic_baseline_fastfood_24"
        android:contentDescription="@string/morning_platters_logo" />

    <ImageButton
        android:id="@+id/btn_voice_input"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/take_voice_input_logo"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_mic_24" />

    <Button
        android:id="@+id/btn_remove_search_results"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/remove_search_results"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#4527A0"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_shoping_cart"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/product_grid_view" />

    <Button
        android:id="@+id/btn_shoping_cart"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/cart"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#F57C00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_grid_view" />

</androidx.constraintlayout.widget.ConstraintLayout>