<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            />
        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@android:color/white"
            />

        <EditText
            android:id="@+id/edt_User_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/colorTextHint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white"
            />

        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@android:color/white"
            />

        <EditText
            android:id="@+id/edt_User_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/colorTextHint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white"
            />

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"

            />

        <EditText
            android:id="@+id/edt_User_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorTextHint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white"
            />
        <TextView
            android:text="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"

            />

        <EditText
            android:id="@+id/edt_User_Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/colorTextHint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/birthday_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/choose_your_birthday"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/text_register"
            android:textColor="@android:color/white"
            />


        <TextView
        android:id="@+id/login_link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/already_a_member_login"
        android:textColor="@android:color/white"
        android:textSize="16dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>